# tviewlang

./: .gitignore  README.md  pyproject.toml
src/tviewlang/: __init__.py  __main__.py  tviewlang.py
